--- a/custom_components/snmp_printer/manifest.json
+++ b/custom_components/snmp_printer/manifest.json
@@ -4,9 +4,9 @@
   "codeowners": ["@dsorlov"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/dsorlov/snmpPrinter",
+  "documentation": "https://github.com/dsorlov/snmp_printer",
   "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/dsorlov/snmpPrinter/issues",
+  "issue_tracker": "https://github.com/dsorlov/snmp_printer/issues",
   "requirements": ["pysnmp==7.1.21"],
   "version": "1.0.0",
   "zeroconf": [
