Reverted name change

--- a/custom_components/snmpPrinter/services.yaml
+++ b/custom_components/snmpPrinter/services.yaml
@@ -8,7 +8,7 @@ display_text:
       required: true
       selector:
         device:
-          integration: snmp_printer
+          integration: snmpPrinter
     text:
       name: Text
       description: Text to display on the printer
