--- a/custom_components/snmpPrinter/manifest.json
+++ b/custom_components/snmpPrinter/manifest.json
@@ -1,12 +1,12 @@
 {
-  "domain": "snmp_printer",
+  "domain": "snmpPrinter",
   "name": "SNMP Printer",
   "codeowners": ["@dsorlov"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/dsorlov/snmp_printer",
+  "documentation": "https://github.com/dsorlov/snmpPrinter",
   "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/dsorlov/snmp_printer/issues",
+  "issue_tracker": "https://github.com/dsorlov/snmpPrinter/issues",
   "requirements": ["pysnmp==7.1.21"],
   "version": "1.0.0",
   "zeroconf": [
